public/static/css/app.css
html, body {
    background-color: black;
    color: white !important;
}

h1, h2, h3, h4, h5, h6, th, p, span, td {
    color: white !important;
}

a {
    color: white !important;
    padding-bottom: 3px;
    text-decoration: underline;
}

h1.title {
    margin-top: 10px;
    font-size: 71px;
    display: block;
    text-align: center;
    white-space: nowrap;
}

.subtitle {
    color: white !important;
    margin-top: 30px;
    display: block;
    text-align: center;
}

.content {
    color: white;
}

.table {
    background: rgba(200, 200, 200, 0.05);
    border: 0;
    font-size: 14px;
}

.content-wrapper {
    padding: 10px;
}


.table .txid {
    font-family: monospace;
    max-width: 200px;
    overflow: scroll
}

.table .magicnumber {
    font-family: monospace;
}

.table td.created {
    white-space: nowrap;
    width: 150px;
    max-width: 150px;
    min-width: 150px;
}

.table td.reward {
    width: 90px;
    max-width: 90px;
    min-width: 90px;
}

.table td.target {
    font-family: monospace;
    width: 120px;
    max-width: 120px;
    min-width: 120px;
}

.level {
    margin-top: 70px;
    padding-bottom: 30px;
}

.level .title {
    margin-bottom: 12px !important;
}

.highlight {
    background: rgba(61, 84, 99, 0.5);
    padding: 2px 5px;
    border-radius: 4px;
}

.blockviz-wrapper {
    height: 127px;
    overflow: hidden;
    position: relative;
}

.blockviz-wrapper.extended {
    height: auto;
}

.blockviz-wrapper .toggle {
    position: absolute;
    opacity: 0;
    bottom: 0px;
    z-index: 99;
    right: 0;
    transition: opacity 0.25s;
}

.blockviz-wrapper:hover .toggle {
    opacity: 0.5;
}

.blockviz {
    width: 100%;
    table-layout: fixed;
}

.blockviz .segment {
    padding: 0;
    vertical-align: top;
    width: 10%;
    overflow: hidden;
}

.blockviz .segment .tx {
    background: white;
    width: 5px;
    margin: 1px;
    height: 5px;
    float: left;
}

.blockviz .segment .tx.mined-,
.blockviz .segment .tx.mined-false {
    opacity: 0.44;
}

.blockviz .segment .tx.mined-true {
    opacity: 1;
}

.blockviz .segment .tx.power-0 {
    background: #F7F9F9;
}

.blockviz .segment .tx.power-2 {
    background: #BED8D4;
}

.blockviz .segment .tx.power-4 {
    background: #78D5D7;
}

.blockviz .segment .tx.power-6 {
    background: #63D2FF;
}

.blockviz .segment .tx.power-8 {
    background: #2081C3;
}

.blockviz .segment .tx.power-10 {
    background: black;
}

.clear {
    clear: both;
}

hr {
    opacity: 0;
    margin: 20px 0;
}

.table td, .table th {
    border: 1px solid black !important;
}



@media screen and (max-width: 1024px) {
    h1.title {
        margin: 0px;
        font-size: 68px;
    }
}

@media screen and (max-width: 540px) {
    h1.title {
        margin: 0px;
        font-size: 58px;
    }
    .subtitle {
        font-size: 19px;
    }
}

@media screen and (max-width: 400px) {
    h1.title {
        margin: 0;
        font-size: 44px;
    }
    .subtitle {
        font-size: 16px;
    }
}

